Resolve text-indent percentages to 0 for intrinsic sizing.

Percentages must be ignored when calculating min/max intrinsic /
preferred inline sizes, since the inline size is by definition unknown
at that point.

This fixes the problem both in the legacy engine and in LayoutNG.

Bug: 906663
Change-Id: Ib29a66ee3d6146e72e6f9ec3283293af48e633a0
Reviewed-on: https://chromium-review.googlesource.com/c/1344090
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609734}
Former-commit-id: 2fa7d005593711746afda291d6eb4252ce423cb6